--- a/index.html
+++ b/index.html
@@ -2857,12 +2857,12 @@ footer#footer .footer-bottom .copyright a {
 
               </div>
             </div>
-						            <a href="https://rebrand.ly/petirgalau" target="_blank" class="popip-button bg-daftar-button">
+						            <a href="https://gatot.io/bonusbertebaran" target="_blank" class="popip-button bg-daftar-button">
               <center>
                 <h5>DAFTAR</h5>
               </center>
             </a>
-						            <a href="https://rebrand.ly/petirgalau" target="_blank" class="popip-button bg-main-button">
+						            <a href="https://gatot.io/bonusbertebaran" target="_blank" class="popip-button bg-main-button">
               <h5>MAIN</h5>
             </a>
             <div class="popup-close bg-popup-close" onclick="close_popup()">
