--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="id"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Protal Game Online Server Luar</title>
+  <title>RTP SLOT HARI INI</title>
 	<link rel="icon" href="https://rtpditogel.com/assets/img/favicon.png" sizes="32x32">
 	<link rel="icon" href="https://rtpditogel.com/assets/img/favicon.png" sizes="192x192">
 	<link rel="apple-touch-icon" href="https://rtpditogel.com/assets/img/favicon.png">
