--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="header" style="margin-top: auto;">
         <div class=" container">
         <center>
-    <a href="https://rebrand.ly/petirgalau"> <img src="./asset/logo2.png"> </a>
+    <a href="https://gatot.io/ditogel88"> <img src="./asset/logo2.png"> </a>
 </center>
           <!-- Carousel -->
                    <!--End Carousel -->
